# blip-gnome

./: .gitignore  Makefile.am  blip-gnome.doap  configure.ac
evolutionquickref/: Makefile.am  __init__.py  sweep.py
gnomeapp/: Makefile.am  sweep.py
gnomedoc/: Makefile.am  sweep.py  web.py
gnomescm/: Makefile.am  __init__.py  web.py
gtkdoc/: Makefile.am  sweep.py
intltool/: Makefile.am  sweep.py
jhbuild/: Makefile.am  sweep.py
